RESOLVED FIXED276666
REGRESSION(274699@main): Crash in `DataDetection::detectContentInFrame`
https://bugs.webkit.org/show_bug.cgi?id=276666
Summary REGRESSION(274699@main): Crash in `DataDetection::detectContentInFrame`
Charlie Wolfe
Reported 2024-07-16 10:36:24 PDT
...
Attachments
Charlie Wolfe
Comment 1 2024-07-16 10:36:34 PDT
Charlie Wolfe
Comment 2 2024-07-16 10:39:52 PDT
EWS
Comment 3 2024-07-16 21:01:11 PDT
Committed 281037@main (7e445644fa20): <https://commits.webkit.org/281037@main> Reviewed commits have been landed. Closing PR #30867 and removing active labels.
EWS
Comment 4 2024-07-19 13:16:14 PDT
Committed 280938.70@integration/ci/129616374_7e445644fa_safari-7619-branch (858fda8dd6e7): <https://commits.webkit.org/280938.70@integration/ci/129616374_7e445644fa_safari-7619-branch> Reviewed commits have been landed. Closing PR #1430 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.