REGRESSION(274699@main): Crash in `DataDetection::detectContentInFrame` https://bugs.webkit.org/show_bug.cgi?id=276666 rdar://129616374

Reviewed by Richard Robinson.

`frame` was being captured as a raw pointer and may have been destroyed by the time the lambda was
executed.

* Source/WebCore/editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::detectContentInFrame):

Canonical link: https://commits.webkit.org/281037@main