Source/WebCore/editing/cocoa/DataDetection.mm
@@ -726,7 +726,7 @@ void DataDetection::detectContentInFrame(LocalFrame* frame, OptionSet<DataDetect
     if (types.contains(DataDetectorType::LookupSuggestion))
         PAL::softLink_DataDetectorsCore_DDScannerEnableOptionalSource(scanner.get(), DDScannerSourceSpotlight, true);
 
-    workQueue().dispatch([scanner = WTFMove(scanner), types, referenceDateFromContext, scanQuery = WTFMove(scanQuery), frame, fragments = WTFMove(fragments), completionHandler = WTFMove(completionHandler)]() mutable {
+    workQueue().dispatch([scanner = WTFMove(scanner), types, referenceDateFromContext, scanQuery = WTFMove(scanQuery), document = Ref { *document }, fragments = WTFMove(fragments), completionHandler = WTFMove(completionHandler)]() mutable {
         if (!PAL::softLink_DataDetectorsCore_DDScannerScanQuery(scanner.get(), scanQuery.get())) {
             callOnMainRunLoop([completionHandler = WTFMove(completionHandler)]() mutable {
                 completionHandler(nil);
@@ -734,14 +734,8 @@ void DataDetection::detectContentInFrame(LocalFrame* frame, OptionSet<DataDetect
             return;
         }
 
-        callOnMainRunLoop([scanner = WTFMove(scanner), types, referenceDateFromContext, scanQuery = WTFMove(scanQuery), frame, fragments = WTFMove(fragments), completionHandler = WTFMove(completionHandler)]() mutable {
-            RefPtr document = frame->document();
-            if (!document) {
-                completionHandler(nil);
-                return;
-            }
-
-            auto contextRange = makeRangeSelectingNodeContents(*document);
+        callOnMainRunLoop([scanner = WTFMove(scanner), types, referenceDateFromContext, scanQuery = WTFMove(scanQuery), document = WTFMove(document), fragments = WTFMove(fragments), completionHandler = WTFMove(completionHandler)]() mutable {
+            auto contextRange = makeRangeSelectingNodeContents(document);
 
             completionHandler(processDataDetectorScannerResults(scanner.get(), types, referenceDateFromContext, scanQuery.get(), contextRange, fragments));
         });
